# ATLAS-MQP-2021

./: .gitignore  CMakeLists.txt  README.md  bashrc  dummy.cpp  package.xml
include/: dummy.h
launch/: CoordinateTransformNodeLaunch.launch  PassThru.launch  ourWorld.launch  slamNodes.launch  slamNodes2.launch
src/: CoordinateTransformNode.cpp  CoordinateTransformNode.h  MapperNode.cpp  MapperNode.h  PointCloudHandlerNode.cpp  PointCloudHandlerNode.h
src/Filtering/: Z_Filter.cpp  Z_Filter.h
src/MappingAndPathfinding/: CSpaceNode.cpp  CSpaceNode.h  FrontierExplorerNode.cpp  FrontierExplorerNode.h  NavigationNode.cpp  NavigationNode.h  PythonCSpaceNode.py  PythonFrontierExplorerNode.py  PythonNavigationNode.py  getCurrentRobotPose.cpp
worlds/: gazebo_world_1.world  gazebo_world_2.world  museum_world.world
